--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Getting Started</title>
+    <title>Webpack Learning</title>
   </head>
   <body>
-    <script src="./dist/main.js"></script>                     
+    <script src="main.js"></script>                     
   </body>
 </html>
